@@ -17,11 +17,13 @@ function Uninstall-Junction
     Uninstall a junction.
     
     .DESCRIPTION
-    `Uninstall-Junction` removes a junction that may or may not exist, without errors.
+    The `Uninstall-Junction` removes a junction that may or may not exist. If the junction exists, it is removed. If a junction doesn't exist, nothing happens.
     
-    If `Path` is not a direcory, you *will* see errors.
+    If the path to uninstall is not a direcory, you *will* see errors.
 
     `Uninstall-Junction` is new in Carbon 2.0.
+
+    Beginning in Carbon 2.2.0, you can uninstall junctions whose paths contain wildcard characters with the `LiteralPath` parameter.
     
     .LINK
     Install-Junction
@@ -41,22 +43,39 @@ function Uninstall-Junction
     Test-PathIsJunction
     Remove-Junction
     #>
-    [CmdletBinding(SupportsShouldProcess=$true)]
+    [CmdletBinding(SupportsShouldProcess=$true,DefaultParameterSetName='Path')]
     param(
+        [Parameter(Mandatory=$true,Position=0,ParameterSetName='Path')]
         [string]
-        # The path to the junction to remove.
-        $Path
+        # The path to the junction to remove. Wildcards supported.
+        $Path,
+
+        [Parameter(Mandatory=$true,ParameterSetName='LiteralPath')]
+        [string]
+        # The literal path to the junction to remove. Use this parameter if the junction's path contains wildcard characters.
+        #
+        # This parameter was added in Carbon 2.2.0.
+        $LiteralPath
     )
 
     Set-StrictMode -Version 'Latest'
 
     Use-CallerPreference -Cmdlet $PSCmdlet -Session $ExecutionContext.SessionState
 
-    if( -not (Test-Path -Path $Path) )
+    if( $PSCmdlet.ParameterSetName -eq 'Path' )
     {
-        return
+        if( [Management.Automation.WildcardPattern]::ContainsWildcardCharacters($Path) )
+        {
+            Remove-Junction -Path $Path
+            return
+        }
+
+        $LiteralPath = $Path
     }
 
-    Remove-Junction -Path $Path
+    if( (Test-Path -LiteralPath $LiteralPath) )
+    {
+        Remove-Junction -LiteralPath $LiteralPath
+    }
 }
 
